--- a/menu.html
+++ b/menu.html
@@ -9,10 +9,11 @@
 </head>
 <body>
   <div class="container">
-    <div id="home" class="column center">
-      <h1>Are you ready ?</h1>
+    <div id="home" class="flex-column flex-center">
+      <h1>Are you ready?</h1>
       <a href="/game.html" class="btn">Play</a>
-      <a href="/highScores.html" class="highScores-btn">High Scores<i class="fas fa-crown"></i></a>
+      <a href="/highScores.html" id="highScore-btn" 
+      class="btn">High Scores <i class="fas fa-crown"></i></a>
     </div>
   </div>
 </body>
