--- a/game.html
+++ b/game.html
@@ -28,7 +28,7 @@
           </h1>
         </div>
       </div>
-      <div class="question">What is the answer to this question?</div>
+      <h2 class="question">What is the answer to this question?</h2>
       <div class="choice-container">
         <p class="choice-prefix">A</p>
         <p class="choice-text" data-choice="1">Choice 1</p>
